<resources>
    <string name="app_name">Recode</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="emma_rivera">Record</string>
    <string name="login">Sign in</string>
    <string name="all">All</string>
    <string name="upcoming">Upcoming</string>
    <string name="missed">Missed</string>
    <string name="completed">Completed</string>
    <string name="cancelled">Cancelled</string>
    <string name="you_have_an">You have an appointment now</string>
    <string name="reschedule">Reschedule</string>
    <string name="darna_janet">Kim Torres</string>
    <string name="makati_medi">Makati Medical Center</string>
    <string name="sep_19_2020">Feb 10, 2021 10:00 am</string>
    <string name="hospital">Hospital</string>
    <string name="status">Status</string>
    <string name="speciality">Speciality</string>
    <string name="doctor">Doctor</string>
    <string name="patient">Patient</string>
    <string name="gender">Gender</string>
    <string name="birth">Date of birth</string>
    <string name="note">Note</string>
    <string name="payment_method">Payment method</string>
    <string name="order_id">Order ID</string>
    <string name="consultation_fee">Consultation fee:</string>
    <string name="platform_fee">Platform fee:</string>
    <string name="vat">VAT 12% (inclusive):</string>
    <string name="total_price">Total price:</string>
</resources>