<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="188dp"
    android:layout_margin="12dp"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:gravity="top"
            android:text="@string/you_have_an"
            android:textAppearance="@style/you_have_an"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.08"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:lineSpacingExtra="-4sp"
            android:text="@string/upcoming"
            android:textAppearance="@style/upcoming"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.953"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.028" />

        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="6dp"
            android:background="@color/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/info" />


        <ImageView
            android:id="@+id/image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:src="@mipmap/head_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="13dp"
            android:text="@string/darna_janet"
            android:textAppearance="@style/darna_janet"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <TextView
            android:id="@+id/hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="8dp"
            android:text="@string/makati_medi"
            android:textAppearance="@style/makati_medi"
            app:layout_constraintBaseline_toBottomOf="@+id/ic_hospital"
            app:layout_constraintStart_toEndOf="@+id/ic_hospital"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <View
            android:id="@+id/ic_hospital"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="8dp"
            android:background="@drawable/ic_hospital"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <View
            android:id="@+id/ic_time"
            android:layout_width="12dp"
            android:layout_height="12dp"
            android:layout_marginStart="@dimen/margin_left"
            android:layout_marginTop="6dp"
            android:background="@drawable/ic_hospital"
            app:layout_constraintStart_toEndOf="@+id/image"
            app:layout_constraintTop_toBottomOf="@+id/hospital" />

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="3dp"
            android:layout_marginTop="6dp"
            android:text="@string/sep_19_2020"
            android:textAppearance="@style/makati_medi"
            app:layout_constraintBaseline_toBottomOf="@+id/ic_time"
            app:layout_constraintStart_toEndOf="@+id/ic_hospital"
            app:layout_constraintTop_toBottomOf="@+id/name" />


        <View
            android:id="@+id/ic_arrow"
            android:layout_width="6dp"
            android:layout_height="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="18dp"
            android:background="@drawable/ic_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <View
            android:id="@+id/view2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/line"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/leftBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/reschedule"
            android:textAppearance="@style/you_have_an"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/view3"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintVertical_bias="0.5" />

        <View
            android:id="@+id/view3"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginTop="16dp"
            android:background="@color/line"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/date" />

        <TextView
            android:id="@+id/rightBtn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="@string/reschedule"
            android:textAppearance="@style/you_have_an"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/view3"
            app:layout_constraintTop_toBottomOf="@+id/view2"
            app:layout_constraintVertical_bias="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>